# requeste-rs

./: README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/types/: header.rs  method.rs  mod.rs  request.rs  request_trace.rs  response.rs
src/app/: layout.tsx  page.module.css  page.module.scss  page.tsx
src/components/elements/button/: Button.module.scss  Button.tsx
src/components/elements/dropdown/: Dropdown.module.scss  Dropdown.tsx
src/components/elements/input/: TextArea.tsx  TextField.module.scss  TextField.tsx
src/components/elements/tabs/: Tabs.module.scss  Tabs.tsx
src/components/response/: ResponseView.module.css  ResponseView.tsx
src/components/views/menubar/: MenubarView.module.scss  MenubarView.tsx
src/components/views/request/: RequestView.module.scss  RequestView.tsx
src/components/views/request/ContentView/: ContentView.tsx
src/components/views/request/ContentView/RequestBodyView/: RequestBodyView.module.scss  RequestBodyView.tsx
src/components/views/request/ContentView/RequestHeadersView/: RequestHeadersView.module.scss  RequestHeadersView.tsx
src/components/views/request/UrlView/: UrlView.1.tsx  UrlView.module.scss  UrlView.tsx
src/components/views/response/: ResponseView.module.scss  ResponseView.tsx
src/hooks/: useRequest.ts  useRequests.ts  useResponse.ts
src/resources/styles/: fira_code_mono.scss  fira_code_normal.scss  fira_code_propo.scss  globals.scss  vars.scss
src/types/: request.ts  requestTrace.ts  response.ts
